--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html>
 <head>
   <title>Meshki Components</title>
+  <link rel="stylesheet" type="text/css" href="dist/meshki.min.css">
 </head>
 <body>
+  <ul class="nav">
+    <li><a class="logo" href="#home">Meshki</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
+  </ul>
+
   <div class="container">
+    <h1 class="text-center">Meshki</h2>
+    <div class="centerize text-center">
+      <a class="button">Simple</a>
+      <button class="default">Default</button>
+      <button class="success">Success</button>
+      <button class="danger">Danger</button>
+      <button class="warning">Warning</button>
+    </div><br />
+    <div class="code">
+      <code>
+        var app = require('express');<br>
+        app = express();<br>
+        var compression = require('compression');<br><br>
+
+        app.use(compression());<br>
+      </code>
+    </div>
     
   </div>
 </body>
