Updated index.html to reflex latest changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button class="danger">Danger</button>
       <button class="warning">Warning</button>
     </div><br />
-    <div class="code">
+    <div class="code glass">
       <code>
         var app = require('express');<br>
         app = express();<br>
