index.html now uses meshkin.min.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Meshki Components</title>
   <link rel="stylesheet" type="text/css" href="dist/meshki.min.css">
-  <script type="text/javascript" src="src/js/meshki.js"></script>
+  <script type="text/javascript" src="dist/meshki.min.js"></script>
 </head>
 <body>
   <div id="sidenav" class="sidenav">
