sidenav and content are now triggered without the need if ID

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="dist/meshki.min.js"></script>
 </head>
 <body>
-  <div id="sidenav" class="sidenav">
+  <div class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="meshki.closeNav()">&times;</a>
     <a href="#">Home</a>
     <a href="#">Components</a>
@@ -14,7 +14,7 @@
     <a href="#">About</a>
   </div>
 
-  <div id="content" class="content">
+  <div class="content">
   
     <ul class="nav">
       <li><a class="logo" href="#" onclick="meshki.openNav()">Meshki</a></li>
