Added 3 columns of intro to index.html. Added font-awesome

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Meshki Components</title>
   <link rel="stylesheet" type="text/css" href="dist/meshki.min.css">
+  <link rel="stylesheet" type="text/css" href="custom.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <script type="text/javascript" src="dist/meshki.min.js"></script>
 </head>
 <body>
@@ -24,7 +26,26 @@
     </ul>
 
     <div class="container">
-      <h1 class="text-center">Meshki</h2>
+      <div class="row">
+        <h1 class="text-center title">Meshki</h2>
+        <h2 class="text-center">Stylish. Black. Responsive.</h2>
+      </div>
+    
+      <div class="row">
+        <div class="four columns text-center">
+          <i class="fa fa-clock-o" aria-hidden="true"></i><br>
+          <span>Design your whole UI in absolutely no time. We have done our best to keep Meshki stupidly simple and clean.</span>
+        </div>
+        <div class="four columns text-center">
+          <i class="fa fa-smile-o" aria-hidden="true"></i><br>
+          <span>Code while smiling. Meshki is easy to use and edit. Just grab a text editor and start building your web pages in total elegance.</span>
+        </div>
+        <div class="four columns text-center">
+          <i class="fa fa-rocket" aria-hidden="true"></i><br>
+          <span>Oh did I say it's super fast? By using less code and less complex logics, Meshki is light-weight and is not resource-hungry.</span>
+        </div>
+      </div>
+
       <div class="centerize text-center">
         <a class="button">Simple</a>
         <button class="default">Default</button>
