Added "What is Meshki?" section.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
         </div>
       </div>
 
+      <div class="row">
+        <h3>What is Meshki?</h3>
+        <hr>
+        <p>
+          Meshki is a simple, black-colored, responsive boilerplate to kickstart any responsive project. It is only ~10 KiB (minified) and ~23 KiB (normal), including both CSS and JS files, which makes it superb for small to medium projects. It's easy to use, clean and is just beautiful.
+        </p>
+      </div>
+
       <div class="centerize text-center">
         <a class="button">Simple</a>
         <button class="default">Default</button>
