--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         <hr>
         <p>
           Meshki is a simple, black-colored, responsive boilerplate to kickstart any responsive project. It is only ~10 KiB (minified) and ~23 KiB (normal), including both CSS and JS files, which makes it superb for small to medium projects. It's easy to use, clean and is just beautiful.
+          It started as a fork of <a href="http://getskeleton.com" target="_blank">Skeleton</a> project, and it still uses some of the codes of it, Meshki is considered to be a total overhaul of Skeleton and it barely resembles it when you take a look at it.
+          Don't be afraid to have a look at Meshki's code! If you spot any bugs, or you want some improvements, head to <a href="https://github.com/Borderliner/Meshki" target="_blank">our GitHub repository</a> and open an issue or a pull request!
+        </p>
+      </div>
+
+      <div class="row">
+        <h3>Components</h3>
+        <hr>
+        <p>
+          Meshki has various ready-to-use components which you can create anywhere you like. Here are a list of components and how you can put them into use:
         </p>
       </div>
 
