Added grid-table to index.html and custom.css

--- a/index.html
+++ b/index.html
@@ -92,6 +92,60 @@
           </pre>
         </div>
       </div>
+
+      <div class="row">
+        <h4 class="text-center">The Grid System</h4>
+        <p>
+          The grid is a <u>12-column fluid grid with a max width of 960px</u>, that shrinks with the browser/device at smaller sizes. The max width can be changed with one line of CSS and all columns will resize accordingly. The syntax is simple and it makes coding responsive much easier. Go ahead, resize the browser.
+        </p>
+      </div>
+      
+      <div class="row grid-table">
+        <div>
+          <div class="one column">ONE</div>
+          <div class="eleven columns">ELEVEN</div>
+        </div>
+        <div>
+          <div class="two columns">TWO</div>
+          <div class="ten columns">TEN</div>
+        </div>
+        <div>
+          <div class="three columns">THREE</div>
+          <div class="nine columns">NINE</div>
+        </div>
+        <div>
+          <div class="four columns">FOUR</div>
+          <div class="eight columns">EIGHT</div>
+        </div>
+        <div>
+          <div class="five columns">FIVE</div>
+          <div class="seven columns">SEVEN</div>
+        </div>
+        <div>
+          <div class="six columns">SIX</div>
+          <div class="six columns">SIX</div>
+        </div>
+        <div>
+          <div class="seven columns">SEVEN</div>
+          <div class="five columns">FIVE</div>
+        </div>
+        <div>
+          <div class="eight columns">EIGHT</div>
+          <div class="four  columns">FOUR</div>
+        </div>
+        <div>
+          <div class="nine columns">NINE</div>
+          <div class="three columns">THREE</div>
+        </div>
+        <div>
+          <div class="ten columns">TEN</div>
+          <div class="two columns">TWO</div>
+        </div>
+        <div>
+          <div class="eleven columns">ELEVEN</div>
+          <div class="one column">ONE</div>
+        </div>
+      </div>
     </div>
 
   </div>
