Added code example for the grid system

--- a/index.html
+++ b/index.html
@@ -146,6 +146,46 @@
           <div class="one column">ONE</div>
         </div>
       </div>
+      <div class="row">
+        <p>
+          Here's the code for how to use the grid system:
+        </p>
+        <div class="code glass">
+          <pre>
+            <code>
+    &lt;div class="row"&gt;
+      &lt;div class="one column"&gt;
+        A div with one column length
+      &lt;/div&gt;
+      &lt;div class="eleven columns"&gt;
+        A div with eleven columns length
+      &lt;/div&gt;
+    &lt;/div&gt;
+
+    &lt;div class="row"&gt;
+      &lt;div class="one-third column"&gt;
+        A div with one-third of the screen's length
+      &lt;/div&gt;
+      &lt;div class="two-thirds columns"&gt;
+        A div with two-thirds of the screen's length
+      &lt;/div&gt;
+    &lt;/div&gt;
+
+    &lt;div class="row"&gt;
+      &lt;div class="one-half column"&gt;
+        A div with half of the screen's length
+      &lt;/div&gt;
+      &lt;div class="one-half column"&gt;
+        A div with the other half of the screen's length
+      &lt;/div&gt;
+    &lt;/div&gt;
+
+            </code>
+          </pre>
+        </div>
+      </div>
+
+
     </div>
 
   </div>
