--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Meshki Components</title>
+  <title>Meshki</title>
   <link rel="stylesheet" type="text/css" href="dist/meshki.css">
   <link rel="stylesheet" type="text/css" href="custom.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -9,11 +9,17 @@
 </head>
 <body>
   <div class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="meshki.closeNav()">&times;</a>
-    <a href="#">Home</a>
-    <a href="#">Components</a>
-    <a href="#">Docs</a>
-    <a href="#">About</a>
+    <a href="#" class="closebtn" onclick="meshki.closeNav()">&times;</a>
+    <a href="">Home</a>
+    <a href="https://github.com/Borderliner/Meshki">GitHub</a>
+    <a href="http://borderliner.ir">About Me</a>
+    <a href="https://github.com/Borderliner/Meshki/blob/master/README.md">About Meshki</a>
+    <a href="#" disabled style="font-size: 1.5rem">Share on:</a>
+    <div class="share-links">
+      <a href="https://www.facebook.com/sharer/sharer.php?u=http://borderliner.ir/meshki/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+      <a href="https://twitter.com/home?status=http://borderliner.ir/meshki/" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+      <a href="https://plus.google.com/share?url=http%3A//borderliner.ir/meshki/" target="_blank"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a>
+    </div>
   </div>
 
   <div class="content">
@@ -21,9 +27,9 @@
     <div>
       <ul class="nav fixed">
         <li><a class="logo" href="#" onclick="meshki.openNav()">Meshki</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="https://github.com/Borderliner/Meshki/releases">News</a></li>
+        <li><a href="https://github.com/Borderliner/Meshki">GitHub</a></li>
+        <li><a href="#components">Components</a></li>
       </ul>
     </div>
     
@@ -54,7 +60,7 @@
         <p>
           Meshki is a simple, black-colored, responsive boilerplate to kickstart any responsive project. It is only ~10 KiB (minified) and ~23 KiB (normal), including both CSS and JS files, which makes it superb for small to medium projects. It's easy to use, clean and is just beautiful.
           It started as a fork of <a href="http://getskeleton.com" target="_blank">Skeleton</a> project, and it still uses some of the codes of it, Meshki is considered to be a total overhaul of Skeleton and it barely resembles it when you take a look at it.
-          Don't be afraid to have a look at Meshki's code! If you spot any bugs, or you want some improvements, head to <a href="https://github.com/Borderliner/Meshki" target="_blank">our GitHub repository</a> and open an issue or a pull request!
+          Don't be afraid to have a look at Meshki's code! If you spot any bugs, or you want some improvements, head to <a id="components" href="https://github.com/Borderliner/Meshki" target="_blank">our GitHub repository</a> and open an issue or a pull request!
         </p>
       </div>
 
