--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <h4>Typography</h4>
         <hr>
         <p>
-Type is all set with the <code>&lt;rems></code>, so font-sizes and spacial relationships can be responsively sized based on a single <code>&lt;html></code> font-size property. Out of the box, Skeleton never changes the <code>&lt;html></code> font-size, but it's there in case you need it for your project. All measurements are still base 10 though so, an <code>&lt;h1></code> with <code>5.0rem</code> font-size just means <code>50px</code>.</p>
+Type is all set with the <code class="glass">&lt;rems></code>, so font-sizes and spacial relationships can be responsively sized based on a single <code class="glass">&lt;html></code> font-size property. Out of the box, Skeleton never changes the <code class="glass">&lt;html></code> font-size, but it's there in case you need it for your project. All measurements are still base 10 though so, an < class="glass"code>&lt;h1></code> with <code class="glass">5.0rem</code> font-size just means <code class="glass">50px</code>.</p>
       </div>
       <div class="row">
         <div class="six columns">
@@ -347,6 +347,39 @@ Type is all set with the <code>&lt;rems></code>, so font-sizes and spacial relat
           <h4>Heading <span class="heading-font-size"><code>&lt;h4></code> 30rem</span></h4>
           <h5>Heading <span class="heading-font-size"><code>&lt;h5></code> 24rem</span></h5>
           <h6>Heading <span class="heading-font-size"><code>&lt;h6></code> 15rem</span></h6>
+        </div>
+      </div>
+
+      <div class="row">
+        <h4>Code</h4>
+        <hr>
+        <p>
+          Code styling is kept basic: just wrap anything in a <code> &lt;code></code> and it will appear like <code>this</code>. It also has a <code class="glass">glass</code> style which is like <code class="glass">this</code>. For blocks of code, wrap a &lt;code> with a &lt;pre>.<br>
+          Note that for blocks of code, <code class="glass">glass</code> class needs to be added to the &lt;pre>, not &lt;code>.
+        </p>
+      </div>
+      <div class="row">
+        <div class="twelve columns">
+          <pre class="glass">
+            <code>
+
+    &lt;code>bower install meshki&lt;/code>
+    &lt;code class="glass">bower install meshki&lt;/code>
+
+    &lt;pre>
+      &lt;code>.some-class {
+        background-color: red;
+      }&lt;/code>
+    &lt;/pre>
+
+    &lt;pre class="glass">
+      &lt;code>(function(
+        console.log('Hello world!');
+      ))();&lt;/code>
+    &lt;/pre>
+
+            </code>
+          </pre>
         </div>
       </div>
 
