Added documents about tables

--- a/index.html
+++ b/index.html
@@ -383,6 +383,61 @@ Type is all set with the <code class="glass">&lt;rems></code>, so font-sizes and
         </div>
       </div>
 
+      <div class="row">
+        <h4>Tables</h4>
+        <hr>
+        <p>
+          Be sure to use properly formed table markup with <code class="glass">&lt;thead></code> and <code class="glass">&lt;tbody></code> when building a <code class="glass">table</code>.
+        </p>
+        <p>
+          You can customize your table with the below classes:
+          <ul>
+            <li><code class="glass">hover</code> : Makes your table's rows highlighted when hovering over them with mouse.</li>
+            <li><code class="glass">striped</code> : It stripes your table (even rows, except the header).</li>
+          </ul>
+        </p>
+      </div>
+      <div class="row">
+        <div class="twelve columns">
+          <table class="expand hover">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Sex</th>
+                <th>Location</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Mohammad reza Hajianpour</td>
+                <td>23</td>
+                <td>Male</td>
+                <td>Iran</td>
+              </tr>
+              <tr>
+                <td>Carl Johnson</td>
+                <td>48</td>
+                <td>Male</td>
+                <td>Los Santos</td>
+              </tr>
+              <tr>
+                <td>Malena Morgan</td>
+                <td>25</td>
+                <td>Female</td>
+                <td>Florida</td>
+              </tr>
+              <tr>
+                <td>Harry Truman</td>
+                <td>88</td>
+                <td>Male</td>
+                <td>Missouri</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
     </div>
 
   </div>
