Commentized all files

--- a/index.html
+++ b/index.html
@@ -484,6 +484,51 @@
         </pre>
       </div>
 
+    <div class="row">
+      <h4>Utilities</h4>
+      <hr>
+      <p>
+        Meshki has a number of small utility classes that act as easy-to-use helpers. Sometimes it's better to use a utility class than create a whole new class just to float an element.
+      </p>
+    </div>
+    <div class="row">
+      <pre class="glass">
+        <code>
+    /* Make element full width */
+    .expand {
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    /* Make sure elements don't run outside containers (great for images in columns) */
+    .expand-container {
+      max-width: 100%;
+      box-sizing: border-box;
+    }
+
+    /* Float either direction */
+    .float-left {
+      float: left;
+    }
+
+    .float-right {
+      float: right;
+    }
+
+    /* Center an element */
+    .centerize {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    /* Center a text */
+    .text-center {
+      text-align: center;
+    }
+        </code>
+      </pre>
+    </div>
+
     </div>
 
   </div>
