--- a/index.html
+++ b/index.html
@@ -65,6 +65,37 @@
       </div>
 
       <div class="row">
+        <h3>Getting Started</h3>
+        <hr>
+        <p>
+          Meshki uses a fixed structure to lessen the burden of setting extra ids and classes. So you always need to create the same structure for all your apps. Don't worry, this structure is very basic and it does not limit you in any ways.<br>
+          First of all, you need to have a <code class="glass">&lt;div></code> with the <code class="glass">sidenav</code> class, just after the beginning of the body. Your <a href="#">sidenav</a>'s links will reside in here. Then, you need to create a <code class="glass">&lt;div></code> after the sidenav's div, with the <code class="glass">content</code> class. The rest of your body should be created inside the "content" div. Inspect the elements on this page to understand the structure. Also, here's a sample code:<br>
+        </p>
+        <pre class="glass">
+          <code>
+    &lt;!DOCTYPE html>
+    &lt;html>
+    &lt;head>
+      &lt;title>Meshki&lt;/title>
+      &lt;link rel="stylesheet" type="text/css" href="dist/meshki.min.css">
+      &lt;script type="text/javascript" src="dist/meshki.min.js">&lt;/script>
+    &lt;/head>
+    &lt;body>
+      &lt;div class="sidenav">
+        &lt;!-- Sidenav links here -->
+      &lt;/div>
+      &lt;div class="content">
+        &lt;div class="row">
+          &lt;h3>Welcome to my cool website&lt;/h3>
+          &lt;p>This is a sample paragraph.&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/body>
+          </code>
+        </pre>
+      </div>
+
+      <div class="row">
         <h3>Components</h3>
         <hr>
         <p>
