Added documents for Sidenav

--- a/index.html
+++ b/index.html
@@ -129,6 +129,30 @@
             </code>
           </pre>
       </div>
+
+      <div class="row">
+        <h4>Sidenav</h4>
+        <hr>
+        <p>
+          Creating a sidenav is easy: Just create a <code class="glass">&lt;div></code> with the <code class="glass">&lt;sidenav</code> class after the opening body tag. Then add <code class="glass">&lt;a></code> tags to make sidenav links. It's pretty easy and straight-forward. Use the JavaScript functions of <code class="glass">meshki.openNav()</code> and <code class="glass">meshki.closeNav()</code> on events to open and close sidenav respectively. Here's an example for your convenience:
+        </p>
+        <pre class="glass">
+          <code>
+    &lt;body>
+      &lt;div class="sidenav">
+        &lt;a href="#" class="closebtn" onclick="meshki.closeNav()">&amp;times;&lt;/a>
+        &lt;a href="">Home&lt;/a>
+        &lt;a href="https://github.com/Borderliner/Meshki">GitHub&lt;/a>
+        &lt;a href="http://borderliner.ir">About Me&lt;/a>
+        &lt;a href="https://github.com/Borderliner/Meshki/blob/master/README.md">About Meshki&lt;/a>
+        &lt;a href="#" disabled>Share on:&lt;/a>
+      &lt;/div>
+    .
+    .
+    .
+          </code>
+        </pre>
+      </div>
       
       <div class="row">
         <h4>The Grid System</h4>
