Added document for Navbar

--- a/index.html
+++ b/index.html
@@ -153,6 +153,26 @@
           </code>
         </pre>
       </div>
+
+      <div class="row">
+        <h4>Navbar</h4>
+        <hr>
+        <p>
+          Meshki comes with a beautiful navbar built-in. At the beginning of the <code class="glass">content</code> div, create an empty div, and then create a <code class="glass">&lt;ul class="nav"></code> inside that. Now any <code class="glass">&lt;li>&lt;a href="#">Link&lt;/a>&lt;/li></code> will appear as a button in the navbar. You can also add the <code class="glass">fixed</code> class to make the navbar fixed.
+        </p>
+        <pre class="glass">
+          <code>
+    &lt;div>
+      &lt;ul class="nav fixed">
+        &lt;li>&lt;a class="logo" href="#" onclick="meshki.openNav()">Meshki&lt;/a>&lt;/li>
+        &lt;li>&lt;a href="https://github.com/Borderliner/Meshki/releases">News&lt;/a>&lt;/li>
+        &lt;li>&lt;a href="https://github.com/Borderliner/Meshki">GitHub&lt;/a>&lt;/li>
+        &lt;li>&lt;a href="#components">Components&lt;/a>&lt;/li>
+      &lt;/ul>
+    &lt;/div>
+          </code>
+        </pre>
+      </div>
       
       <div class="row">
         <h4>The Grid System</h4>
