Added a compact footer to the bottom of the page

--- a/index.html
+++ b/index.html
@@ -602,6 +602,16 @@
         </pre>
       </div>
     </div>
+    <footer class="compact">
+      <div class="row">
+        <div class="six columns">
+          <p>Created by: Mohammad reza Hajianpour (<a href="https://github.com/Borderliner">Borderliner</a>)</p>
+        </div>
+        <div class="six columns custom-text-right">
+          <p>2016, Licensed under <a href="https://github.com/Borderliner/Meshki/blob/master/LICENSE.md">MIT</a></p>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 
