Added a proper documentation for the footer

--- a/index.html
+++ b/index.html
@@ -514,6 +514,28 @@
         </div>
       </div>
       <div class="row">
+        <h4>Footer</h4>
+        <hr>
+        <p>
+          Meshki has a customized footer which is ready to use out-of-the-box. Create a <code class="glass">&lt;footer></code> element (or a div with "footer" class, since IE8 does not support &lt;footer>). You can also have a "compact" version of the footer by adding "compact" class to the footer.
+        </p>
+        <pre class="glass">
+          <code>
+    &lt;footer class="compact">
+      &lt;div class="row">
+        &lt;div class="six columns">
+          &lt;p>Created by: Mohammad reza Hajianpour (Borderliner)&lt;/p>
+        &lt;/div>
+        &lt;div class="six columns custom-text-right">
+          &lt;p>2016, Licensed under MIT&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/footer>
+          </code>
+        </pre>
+      </div>
+
+      <div class="row">
         <h4>Media Queries</h4>
         <hr>
         <p>
