--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@
         <hr>
         <p>
           Meshki has a customized footer which is ready to use out-of-the-box. Create a <code class="glass">&lt;footer></code> element (or a div with "footer" class, since IE8 does not support &lt;footer>). You can also have a "compact" version of the footer by adding "compact" class to the footer.
+          <b>Note</b> that Meshki's footer does not enforce footer's height, so the more you add, the bigger it gets.
         </p>
         <pre class="glass">
           <code>
