Added an example search bar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="https://github.com/Borderliner/Meshki/releases">News</a></li>
         <li><a href="https://github.com/Borderliner/Meshki">GitHub</a></li>
         <li><a href="#components">Components</a></li>
+        <li class="nav-right hide-on-mobile"><input type="text" name="" placeholder="Search..."></li>
       </ul>
     </div>
     <div class="container">
