Updated documents for utility section

--- a/index.html
+++ b/index.html
@@ -605,11 +605,11 @@
 
       /* Float either direction */
       .float-left {
-        float: left;
+        float: left !important;
       }
 
       .float-right {
-        float: right;
+        float: right !important;
       }
 
       /* Center an element */
@@ -622,6 +622,31 @@
       .text-center {
         text-align: center;
       }
+
+      @media (max-width: 544px) {
+        .hide-on-mobile {
+          display: none;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .hide-on-tablet {
+          display: none;
+        }
+      }
+
+      @media (min-width: 768px) {
+        .hide-on-desktop {
+          display: none;
+        }
+      }
+
+      @media (min-width: 544px) {
+        .hide-on-non-mobile {
+          display: none;
+        }
+      }
+
           </code>
         </pre>
       </div>
