--- a/index.html
+++ b/index.html
@@ -29,7 +29,19 @@
         <li><a class="logo" href="javascript:void(0);" onclick="meshki.openNav()">Meshki</a></li>
         <li><a href="https://github.com/Borderliner/Meshki/releases">News</a></li>
         <li><a href="https://github.com/Borderliner/Meshki">GitHub</a></li>
-        <li><a href="#components">Components</a></li>
+        <li class="nav-dropdown hide-on-mobile">
+          <a href="#components" class="nav-dropdown-button">Components</a>
+          <div class="nav-dropdown-content">
+            <a href="#buttons-doc">Buttons</a>
+            <a href="#sidenav-doc">Sidenav</a>
+            <a href="#navbar-doc">Navbar</a>
+            <a href="#grid-doc">Grid System</a>
+            <a href="#form-doc">Forms</a>
+            <a href="#typography-doc">Typography</a>
+            <a href="#tables-doc">Tables</a>
+            <a href="#footer-doc">Footer</a>
+          </div>
+        </li>
         <li class="nav-right hide-on-mobile"><input type="text" name="" placeholder="Search..."></li>
       </ul>
     </div>
@@ -99,7 +111,7 @@
         <h3>Components</h3>
         <hr>
         <p>
-          Meshki has various ready-to-use components which you can create anywhere you like. Keep in mind that <u>being small and "enough" are our main goals</u>, and <u> Meshki is not a UI framework</u>, therefore you may need to add extra libraries for other fancy stuff. However, most of the common components are ready to use and well-tested. But don't worry! We'll make sure that you always get the most stable UI and a beautiful experience, and we may add extra components from time to time.<br><br>
+          Meshki has various ready-to-use components which you can create anywhere you like. Keep in mind that <u>being small and "enough" are our main goals</u>, and <u> Meshki is not a UI framework</u>, therefore you may need to add extra libraries for other fancy stuff. However, most of the common components are ready to use and well-tested. But don't worry! We'll make sure that you always get the most stable UI and a beautiful experience, and we may add extra components from time to time.<br id="buttons-doc"><br>
           Here are a list of components and how you can put them into use:
         </p>
       </div>
@@ -125,12 +137,12 @@
     &lt;button class="default"&gt;Default&lt;/button&gt;
     &lt;input type="submit" class="success" value="Success" /&gt;
     &lt;input type="reset" class="danger" value="Danger" /&gt;
-    &lt;input type="button" class="warning" value="Warning" /&gt;
+    &lt;input type="button" class="warning" value="Warning" /&gt;<div id="sidenav-doc"></div>
             </code>
           </pre>
       </div>
 
-      <div class="row" id="sidenav-doc">
+      <div class="row">
         <h4>Sidenav</h4>
         <hr>
         <p>
@@ -150,7 +162,7 @@
       &lt;/div>
     .
     .
-    .
+    .<div id="navbar-doc"></div>
           </code>
         </pre>
       </div>
@@ -171,7 +183,7 @@
         &lt;li>&lt;a href="https://github.com/Borderliner/Meshki">GitHub&lt;/a>&lt;/li>
         &lt;li>&lt;a href="#components">Components&lt;/a>&lt;/li>
       &lt;/ul>
-    &lt;/div>
+    &lt;/div><div id="grid-doc"></div>
           </code>
         </pre>
       </div>
@@ -262,7 +274,7 @@
       &lt;div class="one-half column"&gt;
         A div with the other half of the screen's length
       &lt;/div&gt;
-    &lt;/div&gt;
+    &lt;/div&gt;<div id="form-doc"></div>
 
             </code>
           </pre>
@@ -403,7 +415,7 @@
       &lt;div class="row">
         &lt;button>Submit&lt;/button>
       &lt;/div>
-    &lt;/form>
+    &lt;/form><div id="typography-doc"></div>
             </code>
           </pre>
       </div>
@@ -454,7 +466,7 @@
         &lt;code>(function(
           console.log('Hello world!');
         ))();&lt;/code>
-      &lt;/pre>
+      &lt;/pre><div id="tables-doc"></div>
 
               </code>
             </pre>
@@ -511,7 +523,7 @@
                 <td>Missouri</td>
               </tr>
             </tbody>
-          </table>
+          </table><div id="footer-doc"></div>
         </div>
       </div>
       <div class="row">
@@ -654,7 +666,7 @@
     <footer class="compact">
       <div class="row">
         <div class="six columns">
-          <p>Created by: Mohammad reza Hajianpour (<a href="https://github.com/Borderliner">Borderliner</a>)</p>
+          <p>Created with &hearts; by Mohammad reza Hajianpour (<a href="https://github.com/Borderliner">Borderliner</a>)</p>
         </div>
         <div class="six columns custom-text-right">
           <p>2016, Licensed under <a href="https://github.com/Borderliner/Meshki/blob/master/LICENSE.md">MIT</a></p>
