--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <a href="https://github.com/Borderliner/Meshki">GitHub</a>
     <a href="http://borderliner.ir">About Me</a>
     <a href="https://github.com/Borderliner/Meshki/blob/master/README.md">About Meshki</a>
+    <div class="hide-on-non-mobile">
+      <a href="#buttons-doc">Buttons</a>
+      <a href="#sidenav-doc">Sidenav</a>
+      <a href="#navbar-doc">Navbar</a>
+      <a href="#grid-doc">Grid System</a>
+      <a href="#form-doc">Forms</a>
+      <a href="#typography-doc">Typography</a>
+      <a href="#tables-doc">Tables</a>
+      <a href="#footer-doc">Footer</a>
+    </div>
     <a href="#" disabled style="font-size: 1.5rem">Share on:</a>
     <div class="share-links">
       <a href="https://www.facebook.com/sharer/sharer.php?u=http://borderliner.ir/meshki/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
