Added separator for sidenav

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
 <body>
   <div class="sidenav">
-    <a href="javascript:void(0);" class="closebtn" onclick="meshki.closeNav()">&times;</a>
+    <a href="javascript:void(0);" class="sidenav-close-button" onclick="meshki.closeNav()">&times;</a>
     <a href="">Home</a>
     <a href="https://github.com/Borderliner/Meshki">GitHub</a>
     <a href="http://borderliner.ir">About Me</a>
     <a href="https://github.com/Borderliner/Meshki/blob/master/README.md">About Meshki</a>
+    <hr class="hide-on-non-mobile">
     <div class="hide-on-non-mobile">
       <a href="#buttons-doc">Buttons</a>
       <a href="#sidenav-doc">Sidenav</a>
@@ -26,6 +27,7 @@
       <a href="#tables-doc">Tables</a>
       <a href="#footer-doc">Footer</a>
     </div>
+    <hr>
     <a href="#" disabled style="font-size: 1.5rem">Share on:</a>
     <div class="share-links">
       <a href="https://www.facebook.com/sharer/sharer.php?u=http://borderliner.ir/meshki/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
@@ -163,11 +165,12 @@
     &lt;body>
       &lt;div class="sidenav">
         &lt;!-- Note that javascript:void(0) stops your page from jumping to the top -->
-        &lt;a href="javascript:void(0)" class="closebtn" onclick="meshki.closeNav()">&amp;times;&lt;/a>
+        &lt;a href="javascript:void(0)" class="sidenav-close-button" onclick="meshki.closeNav()">&amp;times;&lt;/a>
         &lt;a href="">Home&lt;/a>
         &lt;a href="https://github.com/Borderliner/Meshki">GitHub&lt;/a>
         &lt;a href="http://borderliner.ir">About Me&lt;/a>
         &lt;a href="https://github.com/Borderliner/Meshki/blob/master/README.md">About Meshki&lt;/a>
+        &lt;hr>
         &lt;a href="#" disabled>Share on:&lt;/a>
       &lt;/div>
     .
