Close sidenav when clicked on a component link

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <a href="https://github.com/Borderliner/Meshki/blob/master/README.md">About Meshki</a>
     <hr class="hide-on-non-mobile">
     <div class="hide-on-non-mobile">
-      <a href="#buttons-doc">Buttons</a>
-      <a href="#sidenav-doc">Sidenav</a>
-      <a href="#navbar-doc">Navbar</a>
-      <a href="#grid-doc">Grid System</a>
-      <a href="#form-doc">Forms</a>
-      <a href="#typography-doc">Typography</a>
-      <a href="#tables-doc">Tables</a>
-      <a href="#footer-doc">Footer</a>
+      <a href="#buttons-doc" onclick="meshki.closeNav()">Buttons</a>
+      <a href="#sidenav-doc" onclick="meshki.closeNav()">Sidenav</a>
+      <a href="#navbar-doc" onclick="meshki.closeNav()">Navbar</a>
+      <a href="#grid-doc" onclick="meshki.closeNav()">Grid System</a>
+      <a href="#form-doc" onclick="meshki.closeNav()">Forms</a>
+      <a href="#typography-doc" onclick="meshki.closeNav()">Typography</a>
+      <a href="#tables-doc" onclick="meshki.closeNav()">Tables</a>
+      <a href="#footer-doc" onclick="meshki.closeNav()">Footer</a>
     </div>
     <hr>
     <a href="#" disabled style="font-size: 1.5rem">Share on:</a>
