--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 
 <head>
   <title>Meshki</title>
+  <meta name="description" content="Meshki: A Black-Colored, Responsive Boilerplate for UI Development">
+  <meta property="og:title" content="Meshki UI"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="meta-image.png"/>
+  <meta property="og:url" content="http://meshki.borderliner.ir"/>
+  <meta property="og:description" content="Meshki: A Black-Colored, Responsive Boilerplate for UI Development"/>
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="http://meshki.borderliner.ir">
+  <meta name="twitter:title" content="Meshki UI">
+  <meta name="twitter:description" content="Meshki: A Black-Colored, Responsive Boilerplate for UI Development">
+  <meta name="twitter:image" content="meta-image.png">
   <link rel="stylesheet" type="text/css" href="dist/meshki.css">
   <link rel="stylesheet" type="text/css" href="custom.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
