--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" type="text/css" href="dist/meshki.css">
   <link rel="stylesheet" type="text/css" href="custom.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="dist/favicon.ico" type="image/x-icon" />
   <script type="text/javascript" src="dist/meshki.min.js"></script>
 </head>
 
