--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>Meshki</title>
   <meta name="description" content="Meshki: A Black-Colored, Responsive Boilerplate for UI Development">
+  <meta name="keywords" content="HTML,CSS,Meshki,UI,Framework,JavaScript">
+  <meta name="author" content="Mohammad reza Hajianpour">
   <meta property="og:title" content="Meshki UI"/>
   <meta property="og:type" content="website"/>
   <meta property="og:image" content="meta-image.png"/>
