Fixed sidenav's disabled links still working. Fixed outline issue with sidenavs links.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a href="#footer-doc" onclick="meshki.closeNav()">Footer</a>
     </div>
     <hr>
-    <a href="#" disabled style="font-size: 1.5rem">Share on:</a>
+    <a href="javascript:void(0)" disabled style="font-size: 1.5rem">Share on:</a>
     <div class="share-links">
       <a href="https://www.facebook.com/sharer/sharer.php?u=http://borderliner.ir/meshki/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
       <a href="https://twitter.com/home?status=http://borderliner.ir/meshki/" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
